                                                         -*- coding: utf-8 -*-
Changes with Apache Traffic Server 3.3.1
  *) [TS-1469] Manager uses hardcoded FD limit causing restarts
      forever on traffic_server. Reported By: Thomas Jackson

  *) [TS-1466] disable ssl compression by default

  *) [TS-1464] mark ink_assert with the noreturn attribute

  *) [TS-1458] fix LuaJIT include ordering

  *) [TS-1454] crash when ic_hostname is null in cluster mode

  *) [TS-1270] add force local cache control in clustering mode

  *) [TS-1386] thread hang in cluster type=1, which will trigger the
     throttling

  *) [TS-1351] raw disk cache disabled when system start

  *) [TS-1452] gzip build failure with Apple/clang-421.0.57

  *) [TS-1339] Move fragment offset table from First Doc to Alt header so
     that fragment offsets are stored per alternate.

  *) [TS-1416] Do not do cache lookup if cop_test_page is true to stop
     artificial increase of cache misses.

  *) [TS-1364] Rewrite reverse-proxy URL headers in all cases, not just
     a basic Redirect target.

  *) [TS-1440] Lua transaction and session hook support

  *) [TS-1266] RAM cache stats are wrong with CLFUS.

  *) [TS-1437] Make the Lua plugin compile on RedHat based distros.

  *) [TS-1436] Added Yahoo directory layout for installation.

  *) [TS-1418] Add automake file to Metalink plugin. Author: Jack Bates.
   Also reorganize the plugins/experimental Makefile.am stuff slightly.

  *) [TS-1414] gzip plugin enhancements


Changes with Apache Traffic Server 3.3.0

  *) [TS-1427] PluginVCs now use a method similar to actual socket VCs
   for firing inactivity timeout events

  *) [TS-1426] protection from NULL deref when using 
   TSHttpTxnOutgoingTransparencySet after a user agent has disconnected

  *) [TS-1425] clean up the lingering read before deallocating its buffers
   when an origin server terminates the connection during a POST request

  *) [TS-1249] Disable ESI packed nodes by default.